# Unity-MMO-Server

./: .gitignore  README.md
tcp_server/: make-all.sh  tcp_server.sln
tcp_server/res/: bt_config.yaml  engine.yaml
tcp_server/res/log4/: log4_allinone.properties  log4_appmgr.properties  log4_dbmgr.properties  log4_game.properties  log4_login.properties  log4_robot.properties  log4_space.properties
tcp_server/res/resource/: ItemPotions.csv  ItemWeapons.csv  item_weapons.csv  world.csv  world03_enemy.csv  world03_npcs.csv  world04_npcs.csv
tcp_server/src/apps/allinone/: CMakeLists.txt  ai_component.h  ai_system.h  allinone.vcxproj  allinone.vcxproj.filters  log4_allinone.log.1  log4_allinone.log.10  log4_allinone.log.11  log4_allinone.log.12  log4_allinone.log.14  log4_allinone.log.15  log4_allinone.log.16  log4_allinone.log.19  log4_allinone.log.2  log4_allinone.log.20  log4_allinone.log.21  log4_allinone.log.22  log4_allinone.log.23  log4_allinone.log.25  log4_allinone.log.26  log4_allinone.log.27  log4_allinone.log.28  log4_allinone.log.3  log4_allinone.log.30  log4_allinone.log.31  log4_allinone.log.4  log4_allinone.log.5  log4_allinone.log.6  log4_allinone.log.7  log4_allinone.log.8  log4_allinone.log.9  main.cpp
tcp_server/src/apps/appmgr/: CMakeLists.txt  app_sync_component.cpp  app_sync_component.h  appmgr.vcxproj  appmgr.vcxproj.filters  console_cmd_create.cpp  console_cmd_create.h  create_world_component.cpp  (+2 more)
tcp_server/src/apps/login/: CMakeLists.txt  account.cpp  account.h  login.h  login.vcxproj  main.cpp  player_component_account.h  player_component_onlineinlogin.cpp  player_component_onlineinlogin.h  redis_login.cpp  redis_login.h
tcp_server/src/libs/libplayer/: CMakeLists.txt  cmd_attack.cpp  cmd_attack.h  cmd_component.cpp  cmd_component.h  cmd_death.cpp  cmd_death.h  cmd_move.cpp  cmd_move.h  cmd_none.cpp  cmd_none.h  cmd_observe.cpp  cmd_observe.h  cmd_pick.cpp  cmd_pick.h  cmd_pvp.cpp  cmd_pvp.h  cmd_system.cpp  cmd_system.h  cmd_teleport.cpp  cmd_teleport.h  command.cpp  command.h  command_component.cpp  command_system.cpp  command_system.h  cpp.hint  enemy.h  libplayer.vcxproj  libplayer.vcxproj.filters  player.cpp  player.h  player_collector_component.cpp  player_collector_component.h  player_component.h  player_component_last_map.cpp  player_component_last_map.h  player_component_proto_list.cpp  player_component_proto_list.h  team.h  (+1 more)
(+268 files in other folders)
